add functioning radio buttons to new stories page

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -13,11 +13,12 @@
  <%= link_to "Edit this group", edit_group_path(group) %>   
 
   </li>
- <%= link_to "New Group", new_group_path(group) %>
+
 
   <% end %>
 </ul>
 
+ <%= link_to "New Group", new_group_path %>
 
 
 
