--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <div class="main">
- <div class="container">
-   <h1>Past Lives</h1>
+ <div class="container-fluid">
+   <h1>past lives</h1>
 
    <%= form_for(@user)do|f| %>
      <div class="form-group">
