--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -2,9 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-/*
- * Globals
- */
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
 
 /* Links */
 a,
@@ -24,20 +24,19 @@ a:hover {
 }
 
 
-/*
- * Base structure
- */
-
 html,
 body {
   height: 100%;
   background-color: #2c3e50;
+ 
 }
 body {
   color: #2c3e50;
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
 }
+
+
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
@@ -114,22 +113,12 @@ body {
  */
 
 .cover {
-  padding: 0 20px;
+ 
 }
 .cover .btn-lg {
   padding: 10px 20px;
   font-weight: bold;
   background-color: #95a5a6;
-}
-
-
-/*
- * Footer
- */
-
-.mastfoot {
-  color: #999; /* IE8 proofing */
-  color: rgba(255,255,255,.5);
 }
 
 
