--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,34 @@
-    <link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
     <div class="site-wrapper">
-
       <div class="site-wrapper-inner">
-
         <div class="cover-container">
-
-          
-
           <div class="inner cover">
             <h1 class="cover-heading">past lives</h1>
             <p class="lead"> Learning more about past experiences with a story generator.</p>
-            <p class="lead">
-              <a href="/login" class="btn btn-lg btn-default">Login</a>
-              <a href="/users/new" class="btn btn-lg btn-default">Signup</a>
+            
+		<div class="container-fluid">
+		<div class = "row">
+			
+				<%= form_tag('login', method: :post)do %>
+				
+				<div class ="form-group" >
+				Email:<%= text_field_tag :email  %>
+				</div>
+				<div class ="form-group">
+
+				Password: <%= password_field_tag :password %>
+				</div>
+				
+				<%= submit_tag "Login", class: "btn btn-lg btn-success"%> 
+				<a href="/users/new" class="btn btn-lg btn-success">Signup</a>
+			<% end %>
+		
+		</div>	
+	</div>
+
+             
+           
             </p>
           </div>
-
-          
-	
 
         </div>
 
