--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,8 +1,9 @@
+<div class="container-fluid">
 <h1> Edit this Stories</h1>
 
 <%= form_for @story do |f| %>
 
-  story Name: <%= f.text_field :story	%>
+  story Name: <%= f.text_field :text	%>
 
 
 
