--- a/app/views/stories/show.html.erb
+++ b/app/views/stories/show.html.erb
@@ -1,4 +1,5 @@
-<h1><%= @story.story %></h1>
+<div class="container-fluid">
+<h1><%= @story.text %></h1>
 
 
 
@@ -6,5 +7,4 @@
 
 <%= link_to "Delete this story!",:story, method: :delete, data: {confirm: "Are you sure you want to delete this story?"} %>
 
-<%= link_to "Back to our storys list", stories_path %>
 </div>
