--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,5 @@
-
-<h1>Groups</h1>
-
-  <%= link_to "Groups", groups_path %>
+<div class= "container-fluid">
+<h1>my groups</h1>
 
 <ul>
   <% @groups.each do |group| %>
