--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,5 @@
+<div class= "container-fluid">
+<h1> new group</h1>
 <%= form_for @group do |f| %>
 
   Group Name: <%= f.text_field :group_name%>
@@ -8,3 +10,5 @@
 <% end %>
 
 <%= link_to "Back to the groups list", groups_path %>
+
+</div>
