--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,17 @@
-<div class="container-fluid">
-<h1>past lives</h1>
-	<h4>story feed</h4>
+<div class="container">
+	<h1>past lives</h1>
+	<h5>story feed</h5>
+	<div class="row">
+		<% @stories.each do |story| %>
+		<div class="col-md-3"></div>	
+		<div class="col-md-3">
+	  		<p class="storys"><%= story.text%></p>
+	  	</div>
+	  	<div class="col-md-3"></div>
+	    
+	<% end %>
 
-<div class="storyfeed">
-<h1> </h1>
-
-  <% @stories.each do |story| %>
-
-    <p><%= story.story%></p>
-<% end %>
 	<!-- show daily story -->
-</div>
-	
 
+	</div>
 </div>
