--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -16,8 +16,8 @@
   <% end %>
 </ul>
 
- <%= link_to "New Group", new_group_path %>
+ 
 
-
+ <a href="/groups/new" class="btn btn-md btn-default">Create New Group</a>
 
 </div>
