--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,11 +11,12 @@
 				<%= form_tag('login', method: :post)do %>
 				
 				<div class ="form-group" >
-				Email:<%= text_field_tag :email  %>
+				<%= label_tag :email %>
+				<%= text_field_tag :email %>
 				</div>
 				<div class ="form-group">
-
-				Password: <%= password_field_tag :password %>
+				<%= label_tag :password %>
+				<%= password_field_tag :password %>
 				</div>
 				
 				<%= submit_tag "Login", class: "btn btn-lg btn-default"%> 
