--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,22 +2,22 @@
 <html>
 <head>
   <title>past lives</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
-<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+
 
 </head>
+
 <body>
-
-
-
-    <%= yield %>
-     
-          <% if current_user %>
+<div class="site-wrapper">
+ 
+         <%= yield %>
+      
+        <% if current_user %>
         <button type="button" class="btn btn-default navbar-btn">
-          <%=link_to "My Account",users_path %></button>
+          <%=link_to "Home",users_path %></button>
         <button type="button" class="btn btn-default navbar-btn">
         <%=link_to "My Groups", groups_path %></button>
         <button type="button" class="btn btn-default navbar-btn">
@@ -31,9 +31,8 @@
         
 
 
-     
      </div>
-   </div>
+
 
 </body>
 </html>
