--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,38 +1,21 @@
-    <div class="site-wrapper">
-      <div class="site-wrapper-inner">
-        <div class="cover-container">
-          <div class="inner cover">
-            <h1 class="cover-heading">past lives</h1>
-            <p class="lead"> Learning more about past experiences with a story generator.</p>
-            
-		<div class="container">
-			<div class = "row">
-			
-				<%= form_tag('login', method: :post)do %>
-				
-				<div class ="form-group" >
-				<%= label_tag :email %>
-				<%= text_field_tag :email %>
-				</div>
-				<div class ="form-group">
-				<%= label_tag :password %>
-				<%= password_field_tag :password %>
-				</div>
-				
-				<%= submit_tag "Login", class: "btn btn-lg btn-default"%> 
-				<a href="/users/new" class="btn btn-lg btn-default">Signup</a>
-			<% end %>
-		
+<div class="site-wrapper">
+  <div class="site-wrapper-inner">
+    <div class="cover-container">
+      <div class="inner cover">
+        <h1 class="cover-heading">past lives</h1>
+        <p class="lead"> Learning more about past experiences with a story generator.</p>
+        
+	<div class="container">
+		<div class = "row">			
+			<%= render partial: "login_form" %>
 		</div>	
 	</div>
 
-             
-           
-            </p>
-          </div>
-
-        </div>
-
+        
       </div>
 
     </div>
+
+  </div>
+
+</div>
