--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,20 +3,18 @@
 <head>
   <title>past lives</title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %> <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
 </head>
 
 <body>
 
-
 <div class="site-wrapper">
- 
+
          <%= yield %>
-      
+      <ul class="nav nav-pills">
         <% if current_user %>
         <button type="button" class="btn btn-default navbar-btn">
           <%=link_to "Home",users_path %></button>
@@ -29,10 +27,7 @@
           <strong>Signed in as  <%=current_user.first_name %> <%=current_user.last_name %> </strong>  
      
           <% end %> 
-  
-        
-
-
+      </ul>
      </div>
 
 <br>
