add group story button and modal

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -5,10 +5,10 @@
   Group Name: <%= f.text_field :group_name%>
 
 
-<%= f.submit "Add group!" %>
+<%= f.submit "Create group" %>
 
 <% end %>
 
-<%= link_to "Back to the groups list", groups_path %>
+
 
 </div>
