--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,6 +5,11 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
+.coverphoto{
+  max-width: 200px;
+  max-height: 300px;
+  margin: 0 auto;
+}
 
 .form-group{
   
@@ -30,23 +35,33 @@ a:hover {
   border: 1px solid #fff;
 }
 
+@font-face {
+    font-family: junction;
+    src: url(junction-regular.woff)
+    }
+@font-face {
+    font-family: journal;
+    src: url(journal.woff)
+    }
 
 html,
 body {
   height: 100%;
-
+  font-family: journal;
  
 }
 body {
 
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
+
 }
 
 
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
+  font-family: junction;
   display: table;
   width: 100%;
   height: 100%; /* For at least Firefox */
@@ -83,6 +98,7 @@ body {
   color: black;
   background-color: transparent;
   text-shadow: 0;
+  font-family: junction;
 }
 
 
