--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -6,18 +6,30 @@
 
 	    <p><%= story.text%></p>
 	    <p><%= story.category%></p>
+
 	  
 		<button type="button" class="btn btn-default btn-xs">
 	 		<%= link_to "Show this story", story_path(story)%>
 	 	</button>
 		 <button type="button" class="btn btn-default btn-xs">
-			 <%= link_to "Edit this story", edit_story_path(story) %> 
+			 <%= link_to "Edit this story", edit_story_path(story) %> 	
 		 </button>  
-
+			    <!-- link to add groups method/pass params id -->
+		
+			
+ 
+	<div class="btn-group">
+	  <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+	    Add story to group<span class="caret"></span>
+	  </button>
+	  <ul class="dropdown-menu" role="menu">
+	    <li><%= link_to "Show this story", story_path(story)%></li>
+	  </ul>
+	</div>
 	  <% end %>
 	 <% end %>
 
 	</br>
 	 
-	   <a href="/stories/new" class="btn btn-default btn-sm">New Story</a>
+	   <a href="/stories/new" class="btn btn-default btn-sm">create new story</a>
 </div>
