--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -6,18 +6,49 @@
 
 	    <p><%= story.text%></p>
 	    <p><%= story.category%></p>
+
 	  
 		<button type="button" class="btn btn-default btn-xs">
 	 		<%= link_to "Show this story", story_path(story)%>
 	 	</button>
 		 <button type="button" class="btn btn-default btn-xs">
-			 <%= link_to "Edit this story", edit_story_path(story) %> 
+			 <%= link_to "Edit this story", edit_story_path(story) %> 	
 		 </button>  
+			    <!-- link to add groups method/pass params id -->
+		
+			
+ 
+	<button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#myModal">
+  add story to group
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
+      </div>
+      <div class="modal-body">
+
+    	<%= render 'stories/addstorytogroup_form' %>
+        
+
+       </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 	  <% end %>
 	 <% end %>
 
 	</br>
 	 
-	   <a href="/stories/new" class="btn btn-default btn-sm">New Story</a>
+	   <a href="/stories/new" class="btn btn-default btn-sm">create new story</a>
 </div>
