--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -3,9 +3,9 @@
 <h1> new story </h1>
 	<%= form_for @story do |f| %>
 	
-	Story <%= f.radio_button(:category, "Story") %>
+	story <%= f.radio_button(:category, "story") %>
 	
-	Quote <%= f.radio_button(:category, "Quote") %>
+	quote <%= f.radio_button(:category, "quote") %>
 	</br>
   	<strong><%=f.text_area :text %></strong>
 	</br>
