--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,9 @@
 
 
 <div class="site-wrapper">
+    <% if current_user %>
+    <h1>past lives</h1> 
+    <%end%>
  
          <%= yield %>
       
