--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,4 @@
-<div class="container">
-	<h1>past lives</h1>
-
+<div class="container-fluid">
 	<div class="row">
 
 		<% @stories.each do |story| %>
@@ -12,7 +10,7 @@
 	    
 	<% end %>
 
-	<!-- show daily story -->
+
 
 	</div>
 </div>
