--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,12 +8,12 @@
         <p class="lead"> Learning more about past experiences.</p>
         
 <div class="container">
-	<div class = "row">
+	<div class = "row" >
 	
 	<%= render 'sessions/login_form' %>
 
 <!-- Button trigger modal -->
-<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target="#myModal">
   Sign Up
 </button>
 
@@ -26,14 +26,14 @@
         <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
       </div>
       <div class="modal-body">
-
+      <p> How it works...</p>
     
-        'users/signup'
+        <%= render 'users/signup' %>
 
        </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+       
       </div>
     </div>
   </div>
