--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -3,9 +3,9 @@
 	<div class = "stories">
 	<% if current_user %>
 	  <% @stories.each do |story| %>
-
+			<p><%= story.category%></p>
 	    <p><%= story.text%></p>
-	    <p><%= story.category%></p>
+	    
 
 	  
 		<button type="button" class="btn btn-default btn-xs">
@@ -15,17 +15,32 @@
 			 <%= link_to "Edit this story", edit_story_path(story) %> 	
 		 </button>  
 			    <!-- link to add groups method/pass params id -->
-		
-			
+			   
+
+<!-- Button trigger modal -->
+<!-- <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#myModal">
+  add group to story
+</button> -->
+
+<!-- Modal -->
+<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">add group to story</h4>
+      </div>
+      <div class="modal-body">
+        <%# render 'stories/addstorytogroup_form' %>
+      </div>
+    
+    </div>
+  </div>
+</div> -->
+
+
  
-	<div class="btn-group">
-	  <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-	    Add story to group<span class="caret"></span>
-	  </button>
-	  <ul class="dropdown-menu" role="menu">
-	    <li><%= link_to "Show this story", story_path(story)%></li>
-	  </ul>
-	</div>
+		
 	  <% end %>
 	 <% end %>
 
