--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,14 +1,10 @@
 <div class="container-fluid">
-	<h1>my stories</h1>
+	<h3>my stories</h3>
 	<div class = "stories">
 	<% if current_user %>
 	  <% @stories.each do |story| %>
 			<p><%= story.category%></p>
 	    <p><%= story.text%></p>
-
-	    <p><%= story.category%></p>
-
-
 	  
 		<button type="button" class="btn btn-default btn-xs">
 	 		<%= link_to "Show this story", story_path(story)%>
@@ -16,76 +12,10 @@
 		 <button type="button" class="btn btn-default btn-xs">
 			 <%= link_to "Edit this story", edit_story_path(story) %> 	
 		 </button>  
-			    <!-- link to add groups method/pass params id -->
-
-			   
-
-<!-- Button trigger modal -->
-<!-- <button type="button" class="btn btn-default btn-xs" data-toggle="modal" data-target="#myModal">
-  add group to story
-</button> -->
-
-<!-- Modal -->
-<!-- <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-=======
 		
-			
-<<<<<<< HEAD
- 
-=======
-
-	<div class="btn-group">
-	  <button class="btn btn-default btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
-	    Add story to group<span class="caret"></span>
-	  </button>
-	  <ul class="dropdown-menu" role="menu">
-	    <li><%= link_to "Show this story", story_path(story)%></li>
-	  </ul>
-	</div>
-
->>>>>>> css
-	<button type="button" class="btn btn-primary btn-xs" data-toggle="modal" data-target="#myModal">
-  add story to group
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-
-        <h4 class="modal-title" id="myModalLabel">add group to story</h4>
-      </div>
-      <div class="modal-body">
-        <%# render 'stories/addstorytogroup_form' %>
-      </div>
-    
-    </div>
-  </div>
-</div> -->
-
-        <h4 class="modal-title" id="myModalLabel">Sign Up</h4>
-      </div>
-      <div class="modal-body">
-
-    	<%= render 'stories/addstorytogroup_form' %>
-        
-
-       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 	  <% end %>
 	 <% end %>
 
-	</br>
 	 
-	   <a href="/stories/new" class="btn btn-default btn-sm">create new story</a>
+	   <!-- <a href="/stories/new" class="btn btn-default btn-sm">create new story</a> -->
 </div>
