--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,10 @@
 <div class="main">
  <div class="container-fluid">
   <h1>past lives</h1>
+    <h4> How it works...</h4>
+    <p>One of these days there will be a super eloquent description of the inner workings of this here web app.  For now just create a user account, post your stories or quotes and add them to the created groups. Once they're in the group users can also view thoses stories </p>
 
-   <%= form_for(@user)do|f| %>
+   <%= form_for (@user) do |f| %>
      <div class="form-group">
       <%= f.label :first_name %>
       <%= f.text_field :first_name, class: 'form-control' %>
@@ -23,14 +25,17 @@
       <%= f.password_field :password, class: 'form-control' %>
      </div>
 
-
-     <%= f.submit "Create Account", class:"btn" %>
+ 
+     <%= f.submit "Create Account", class:"btn btn-md btn-default" %>
 
   <% end %>
-   </form>
+
+   <button type="button" class="btn btn-default btn-xs">
+       <%= link_to "Back to Home",('/') %>   
+     </button> 
+
   
-  <h3> How it works</h3>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime veritatis debitis dicta recusandae officiis ad nobis asperiores ipsa impedit, voluptas esse ratione inventore nesciunt incidunt illum, accusamus, voluptate libero facere!</p>
+
 
  </div>
 </div>
