--- a/app/views/home/_login_form.html.erb
+++ b/app/views/home/_login_form.html.erb
@@ -1,3 +1,4 @@
+<div class = "form-control">
 <%= form_tag('login', method: :post)do %>
 	
 	<div class ="form-group" >
@@ -10,6 +11,6 @@
 	</div>	
 		<%= submit_tag "Login", class: "btn btn-lg btn-default"%>
 
-	
 
 <% end %>
+</div>
