--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,20 +1,22 @@
 
-    <div class="cover-container">
-      <div class="inner cover">
-        <h1 class="cover-heading">past lives</h1>
-    <!--   <div class = "coverphoto">
-        <img src="<%= asset_path( 'pastlives.jpg' ) %>" /></div> -->
-        <p class="lead"> Learning more about past experiences.</p>
+<div class="cover-container">
+  <div class="inner cover">
+    <h1 class="cover-heading">past lives</h1>
+<!--   <div class = "coverphoto">
+    <img src="<%= asset_path( 'pastlives.jpg' ) %>" /></div> -->
+    <p class="lead"> Learning more about past experiences.</p>
         
-<div class="container">
+
 	<div class = "row" >
-	
+  <div class="col-md-4">  </div>
+  <div class="col-md-4">  
 	<%= render 'sessions/login_form' %>
 
-
- 
+  </div>
+  <div class="col-md-4"> </div>
 
 
       </div>
 
     </div>
+   </div>
