--- a/app/views/stories/_addstorytogroup_form.html.erb
+++ b/app/views/stories/_addstorytogroup_form.html.erb
@@ -8,7 +8,7 @@
   
       <%= submit_tag "add story to group", class: "btn btn-xs btn-default"%> 
    
-
+<% end %>
 <%= form_tag('story.groups', method: :post)do %>
   
   <div class ="form-group" >
