--- a/app/views/stories/_newstory_form.html.erb
+++ b/app/views/stories/_newstory_form.html.erb
@@ -1,12 +1,14 @@
 <%= form_for Story.new do |f| %>
-
+<div class="form-group">
 story <%= f.radio_button(:category, "story") %>
 
 quote <%= f.radio_button(:category, "quote") %>
 </br>
-<strong><%=f.text_area :text %></strong>
+<strong><%=f.text_area :text, class: "form-control" %></strong>
 </br>
 <%= f.submit "save story" %>
+
+</div>
 
 <% end %>
 
