--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,17 +1,19 @@
 
 <div class="container-fluid">
 <h1> new story </h1>
+<div class="form-group">
 	<%= form_for @story do |f| %>
 	
 	story <%= f.radio_button(:category, "story") %>
 	
 	quote <%= f.radio_button(:category, "quote") %>
 	</br>
-  	<strong><%=f.text_area :text %></strong>
+
+  	<strong><%=f.text_area :text, class: "form-control" %></strong>
 	</br>
 <%= f.submit "Save Story" %>
 
 <% end %>
 
 
-</div>s
+</div>
