--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,24 +1,35 @@
-
+<!-- Stories Container -->
 <div class="container-fluid">
+	<div class="row">		
+	<div class="col-md-4"></div>	
+		<ul class="list-group">
+	
+		
+		<div class="col-md-4">	
+		<strong>stories:</strong> 
+			<% @stories.each do |story| %> 
+	  	<li class="list-group-item"><%= story.text%> </li>  
+		<% end %>
+	
+		</br>
 
-<div class="container">
-
-	<h5>story feed</h5>
+<!-- Quotes Container -->
 
 
 
-	<div class="row">
+	
+		<strong>quotes:</strong>
+		<% @quotes.each do |quote| %>
+		
+	  		<li class="list-group-item"><%= quote.text%></li>
+			
 
-		<% @stories.each do |story| %>
-		<div class="col-md-3"></div>	
-		<div class="col-md-3">
-	  		<p class="storiesfeed"><%= story.text%></p>
-  	</div>
-  	<div class="col-md-3"></div>
-	    
+   
 	<% end %>
+		</ul>
 
-
-
+			</div>
+		<div class="col-md-4"></div>
 	</div>
 </div>
+
