--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,22 +2,22 @@
  <div class="container-fluid">
   <h1>past lives</h1>
     <h4> How it works...</h4>
-    <p>One of these days there will be a super eloquent description of the inner workings of this here web app.  For now just create a user account, post your stories or quotes and add them to the created groups. Once they're in the group users can also view thoses stories </p>
+    <p>One of these days there will be a super eloquent description of the inner workings of this here web app.  In the mean time, feel free to create a user account, post your stories or quotes. Once they're in the group users can also view thoses stories </p>
 
    <%= form_for (@user) do |f| %>
      <div class="form-group">
       <%= f.label :first_name %>
-      <%= f.text_field :first_name, class: 'form-control' %>
+      <%= f.text_field :first_name, class: 'form-control',placeholder: 'enter first name' %>
 
      </div>
    <div class="form-group">
       <%= f.label :last_name %>
-      <%= f.text_field :last_name, class: 'form-control' %>
+      <%= f.text_field :last_name, class: 'form-control',placeholder: 'enter Last name' %>
 
      </div>
      <div class="form-group">
       <%= f.label :email %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control',placeholder: 'youremail@email.com' %>
      </div>
 
      <div class="form-group">
