--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,20 @@
 
 <div class="cover-container">
   <div class="inner cover">
-    <h1 class="cover-heading">past lives</h1>
-<!--   <div class = "coverphoto">
-    <img src="<%= asset_path( 'pastlives.jpg' ) %>" /></div> -->
+    <h1 class="logo">past lives</h1>
     <p class="lead"> Learning more about past experiences.</p>
-        
 
-	<div class = "row" >
-  <div class="col-md-4">  </div>
-  <div class="col-md-4">  
-	<%= render 'sessions/login_form' %>
+	<div class= "row" >
+    <div class="col-md-4">  </div>
+    <div class="col-md-4">  
+	     <div class="login">
+        <%= render 'sessions/login_form' %>
+       </div>
+    </div>
+    <div class="col-md-4"> </div>
 
-  </div>
-  <div class="col-md-4"> </div>
 
-
-      </div>
-
+        </div>
+    </div>
     </div>
    </div>
