--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,12 +5,6 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
-.coverphoto{
-  max-width: 200px;
-  max-height: 300px;
-  margin: 0 auto;
-}
-
 .form-group{
   
   margin: 0 auto;
@@ -18,22 +12,40 @@
   border: 1px;
 }
 
+.logo{
+  font-family: journal;
+  font-size: 5em;
+}
+.login{
+  background: transparent;
+  
+}
+.list-group{
+  background: transparent;
+}
+
 /* Links */
 a,
 a:focus,
 a:hover {
-  color: teal;
+  color: black;
 }
 
 /* Custom default button */
-.btn-default,
-.btn-default:hover,
-.btn-default:focus {
-  color: #333;
+.btn-default{
+  border: 1px solid black;
   text-shadow: none;
-  background-color: #555;
-  border: 1px solid #fff;
+
 }
+
+.btn-default:hover{
+  color: yellow;
+  text-shadow: none;
+
+  border: 1px solid black;
+
+}
+
 
 @font-face {
     font-family: junction;
@@ -51,12 +63,13 @@ html,
 body {
   height: 100%;
   font-family: raleway;
+
  
 }
 body {
-
+  font-style: bold;
   text-align: center;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  text-shadow: 0 1px 3px 
 
 }
 
@@ -65,17 +78,20 @@ body {
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
   font-family: raleway;
-  font-style: bold;
+  font-style: extra-bold;
+  background-color: #A4CCC2;
+
   display: table;
   width: 100%;
-  height: 100%; /* For at least Firefox */
+  height: 100%;
   min-height: 100%;
-  -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-          box-shadow: inset 0 0 100px rgba(0,0,0,.5);
+  -webkit-box-shadow: inset 0 0 300px rgba(0,0,0,.5);
+          box-shadow: inset 0 0 300px rgba(0,0,0,.5);
 }
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
+
 }
 .cover-container {
   margin-right: auto;
@@ -103,6 +119,7 @@ body {
   background-color: transparent;
   text-shadow: 0;
   font-family: raleway;
+  font-style: extra-bold;
 }
 
 
@@ -113,7 +130,7 @@ body {
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
+    position: relative;
     top: 0;
   }
   .mastfoot {
@@ -136,6 +153,6 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 700px;
+    width: 100%;
   }
 }
