--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,13 +1,16 @@
 <div class="container-fluid">
 
 <h3> edit this story</h3>
-
+<div class="form-group">
 <%= form_for @story do |f| %>
+story <%= f.radio_button(:category, "story") %>
 
-    <%= f.text_area :text %>
-    
+quote <%= f.radio_button(:category, "quote") %>
+</br>
+  <%= f.text_area :text, class: "form-control", rows: "10"%>
+ </br>   
   <%= f.submit "Edit story" %>
 
 <% end %>
-
+</div>
 </div>
