--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<div class="main">
+
  <div class="container-fluid">
-  <h1>past lives</h1>
+  <h1 class="logo">past lives</h1>
     <h4> How it works...</h4>
     <p>One of these days there will be a super eloquent description of the inner workings of this here web app.  In the mean time, feel free to create a user account, post your stories or quotes. Once they're in the group users can also view thoses stories </p>
 
@@ -12,7 +12,7 @@
      </div>
    <div class="form-group">
       <%= f.label :last_name %>
-      <%= f.text_field :last_name, class: 'form-control',placeholder: 'enter Last name' %>
+      <%= f.text_field :last_name, class: 'form-control',placeholder: 'enter last name' %>
 
      </div>
      <div class="form-group">
@@ -27,12 +27,12 @@
 
  
      <%= f.submit "Create Account", class:"btn btn-md btn-default" %>
-
-  <% end %>
-
-   <button type="button" class="btn btn-default btn-xs">
+   <button type="button" class="btn btn-default btn-md">
        <%= link_to "Back to Home",('/') %>   
      </button> 
+  <% end %>
+
+
 
   
 
