--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -8,7 +8,7 @@
 .form-group{
   
   margin: 0 auto;
-  width: 40%;
+  width: 60%;
   border: 1px;
 }
 
@@ -22,6 +22,21 @@
 }
 .list-group{
   background: transparent;
+}
+
+.scrollbox{
+  background: transparent;
+  border:1px solid black;
+  width:100%;
+  height:300px;
+  overflow:scroll;
+  margin: 0 auto;
+
+  margin-top: 20px;
+  margin-bottom: 5px;
+  position:relative;
+
+
 }
 
 /* Links */
@@ -71,6 +86,10 @@ body {
   text-align: center;
   text-shadow: 0 1px 3px 
 
+}
+
+.btn btn-default navbar-btn{
+  background: transparent;
 }
 
 
@@ -128,30 +147,20 @@ body {
  */
 
 @media (min-width: 768px) {
-  /* Pull out the header and footer */
-  .masthead {
-    position: relative;
-    top: 0;
-  }
-  .mastfoot {
-    position: fixed;
-    bottom: 0;
-  }
+
   /* Start the vertical centering */
   .site-wrapper-inner {
     vertical-align: middle;
   }
   /* Handle the widths */
-  .masthead,
-  .mastfoot,
+
   .cover-container {
     width: 100%; 
   }
 }
 
 @media (min-width: 992px) {
-  .masthead,
-  .mastfoot,
+
   .cover-container {
     width: 100%;
   }
