--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,16 +1,15 @@
 <div class="container-fluid">
+  <h4> edit this story</h4>
+    <div class="form-group">
+      <%= form_for @story do |f| %>
+      <strong><%= f.radio_button(:category, "story") %></strong>
 
-<h3> edit this story</h3>
-<div class="form-group">
-<%= form_for @story do |f| %>
-story <%= f.radio_button(:category, "story") %>
+      <strong>quote <%= f.radio_button(:category, "quote") %></strong>
+      </br>
+        <%= f.text_area :text, class: "form-control", rows: "10"%>
+       </br>   
+        <%= f.submit "Edit story" %>
 
-quote <%= f.radio_button(:category, "quote") %>
-</br>
-  <%= f.text_area :text, class: "form-control", rows: "10"%>
- </br>   
-  <%= f.submit "Edit story" %>
-
-<% end %>
+      <% end %>
 </div>
 </div>
