--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,40 +1,41 @@
+
 <!-- Stories Container -->
-<div class="container-fluid">
+<div class="container">
 	<div class="row">		
-	<div class="col-md-4"></div>	
-		<ul class="list-group">
-	
-		
-		<div class="col-md-4">	
-		
+		<div class="col-md-3"></div>	
+		<div class="col-md-3">
+			 	
+			<div class= "scrollbox">
+			<strong>stories:</strong>
+				<ul class="list-group">
 
-
-
-		<strong>stories:</strong> 
-			<% @stories.each do |story| %> 
-	  	<li class="list-group-item"><%= story.text
-	  	%> </li>  
-		<% end %>
-
-
-	
-		</br>
-
+				
+					<% @stories.each do |story| %> 
+			  	<li class="list-group-item"><%= story.text%> </li>  
+				<% end %>
+				</ul>
+			</div>
+		</div>
 <!-- Quotes Container -->
-
-	
-		<strong>quotes:</strong>
-		<% @quotes.each do |quote| %>
+		<div class="col-md-3">
+		
+			<div class= "scrollbox">
+			<strong>quotes:</strong>
+				<ul class="list-group">
+				
+				<% @quotes.each do |quote| %>
 		
 	  		<li class="list-group-item"><%= quote.text%></li>
 			   
-		<% end %>
+				<% end %>
 
 
-		</ul>
-
+				</ul>
 			</div>
-		<div class="col-md-4"></div>
+		</div>
+
+
+		<div class="col-md-3"></div>
 	</div>
 </div>
 
