heroku upload test

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
  <div class="container-fluid">
   <h1 class="logo">past lives</h1>
     <h4> How it works...</h4>
-    <p>One of these days there will be a super eloquent description of the inner workings of this here web app.  In the mean time, feel free to create a user account, post your stories or quotes. Once they're in the group users can also view thoses stories </p>
+    <p>One of these days there will be a super eloquent description of the inner workings of this here web app.  In the mean time, feel free to create a user account, and post your favorite stories or quotes from the past.</p>
 
    <%= form_for (@user) do |f| %>
      <div class="form-group">
