heroku font fix

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -65,15 +65,15 @@ a:hover {
 
 @font-face {
     font-family: junction;
-    src: url(junction-regular.woff)
+    src: url('fonts/junction-regular.woff')
     }
 @font-face {
     font-family: journal;
-    src: url(journal.woff)
+    src: url('fonts/journal.woff')
     }
 @font-face {
     font-family: raleway;
-    src: url(raleway_thin-webfont.woff)
+    src: url('fonts/raleway_thin-webfont.woff')
     }
 html,
 body {
